syntax = "proto3";

message MessageData{
    // Size of message that we are going to send after this. 
    uint32 message_size = 1; 
    // Enumerated Type of message that we are going to send after this. 
    enum MessageType {
        
        // General instruction message that will do a variety of functions. 
        GENERAL_INSTRUCTIONS = 0; 

        // Matrix Framebuffer data. 
        MATRIX_DATA = 1; 
        
        // LED Strip Framebuffer data. 
        LED_STRIP_DATA = 2;

        // Heaat RGB Light Control Data. 
        HEAAT_CONTROL_DATA = 3; 
    }

    MessageType message_type = 2;
    
    // Whether or not we want a return message
    bool return_message = 3;
}